[gd_scene load_steps=2 format=3 uid="uid://dp7pjrs34bx16"]

[ext_resource type="Script" uid="uid://13n3pvudw6gn" path="res://scripts/radical_symbol.gd" id="2_kj3uj"]

[node name="RadicalSymbol" type="HBoxContainer"]
offset_right = 48.0
offset_bottom = 40.0
theme_override_constants/separation = 0
script = ExtResource("2_kj3uj")

[node name="IndexContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RadicalSide" type="Control" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="RadicalContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RadicalCover" type="ColorRect" parent="RadicalContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="RadicandContainer" type="HBoxContainer" parent="RadicalContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[connection signal="resized" from="RadicalSide" to="." method="_on_resized"]
